fix gradient on mobile width

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -138,7 +138,7 @@
 
     .card-container {
         display: flex;
-        background: linear-gradient(#12a89c, #024945);
+        background: linear-gradient(to bottom, #95A3A4, #697268);
         margin-top: 12px;
         margin-bottom: 12px;
         width: 95%;
